finalized the project, by adding bonus features: reset button & user score display

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -24,7 +24,15 @@
 			<img src="images/king-of-diamonds.png" alt="King of Diamonds">
 			<img src="images/back.png" alt="King of Hearts">
 		</div> -->
-		<div id="game-board" class="board clearfix"></div>
+		<div id="game-board" class="board"></div>
+		<div id="reset-button" class="button button5 clearfix"></div>
+		<!-- <div id="userScore">Score: 0/0</div> -->
+		<p>
+			<span>Score: </span>
+			<span id="userScore">0</span>
+			<span>| Attempts: </span>
+			<span id="userAttempts">0</span>
+		</p>
 	</main>
 <!-- 	<h2>Descriptions</h2>
 	<p>This game can be played by players of all ages. Great for holiday family fun!</p>
